--- a/main.css
+++ b/main.css
@@ -191,7 +191,7 @@ code {
 h1 {
   /*color: #31374F;*/
   color: white;
-  font-family: "Indie Flower";
+  font-family: 'Slabo 27px', serif;
   font-size: 72px;
   font-weight: 400;
   line-height: 1.2;
@@ -202,13 +202,13 @@ h1.title {
   font-size: 96px; }
 
 h2 {
-  font-family: "Indie Flower";
+  font-family: 'Slabo 27px', serif;
   font-size: 36px;
   margin: 20px auto;
   text-align: center; }
 
 h4 {
-  font-family: "Indie Flower";
+  font-family: 'Slabo 27px', serif;
   font-size: 28px;
   margin: 20px auto;
   text-align: center; }
@@ -312,7 +312,7 @@ ul.nav li a {
   /*border-radius: 50%;*/
 }
 
-.github { position: relative; }
+.github, .tool { position: relative; }
 
 .github span {
   opacity: 0;
@@ -324,9 +324,18 @@ ul.nav li a {
    -webkit-transition: opacity .5s ease-in-out;
 }
 
-.github:hover span {
-  opacity: 0.5;
+.tool span {
+  padding: 1px 0;
+  opacity: 0;
+  position: absolute;
+  right: 46px;
+  bottom: 12px;
+  transition: opacity .5s ease-in-out;
+   -moz-transition: opacity .5s ease-in-out;
+   -webkit-transition: opacity .5s ease-in-out;
 }
+
+.github:hover span, .tool:hover span { opacity: 0.5; }
 
 @media (max-width: 420px) {
   ul.nav li a {
