--- a/main.scss
+++ b/main.scss
@@ -110,7 +110,7 @@ code {
 }
 h1 {
   color:#31374F;
-  font-family: "Indie Flower";
+  font-family: "Slao 27px";
   font-size:72px;
   font-weight:400;
   line-height:1.2;
@@ -120,8 +120,8 @@ h1 {
 
 h1.title { font-size:96px; }
 
-h2 { font-family:"Indie Flower";font-size:36px;margin:20px auto;text-align:center; }
-h4 { font-family:"Indie Flower";font-size:28px;margin:20px auto;text-align:center; }
+h2 { font-family:"Slao 27px";font-size:36px;margin:20px auto;text-align:center; }
+h4 { font-family:"Slao 27px";font-size:28px;margin:20px auto;text-align:center; }
 hr { background:#fff;border:0;height:1px;margin:40px 0; }
 
 p {
