--- a/main.css
+++ b/main.css
@@ -189,6 +189,11 @@ code {
   overflow-x: scroll; }
 
 #getting-started strong { color: #a1a7bf; }
+#getting-started div { font-weight: bold; }
+:not(pre) > code[class*="language-"], pre[class*="language-"] {
+  font-weight: normal;
+  /*font-family: 'Consolas', 'Monaco', 'Andale Mono', monospace !important;*/
+}
 
 h1 {
   color: white;
@@ -449,7 +454,7 @@ ul.nav li a {
   overflow: hidden;
 }
 
-.demo div:last-child { font-family: icon; }
+.demo div:last-child { font-family: icon; font-weight: bold; }
 
 @font-face {
   font-family: icon;
@@ -735,3 +740,7 @@ ul.nav li a {
     background-color: #995200; }
   .email-section:hover .email-cover, .email-section:hover .email-inner, .email-section:hover .email-outer {
     transition-timing-function: cubic-bezier(0.2, 0.7, 0.1, 1.1); }
+
+
+.example-image { background: white; }
+.example-image img { padding: 30px 0; }
