--- a/main.scss
+++ b/main.scss
@@ -14,7 +14,15 @@
    background: #fff; height: 100px; color:#31374F; margin: 5px; line-height: 100px;
   }
 .button {
-  background:#31374F;color:#fff;display:block;font-size:16px;margin:20px auto;padding:20px;text-align:center;text-decoration:none;width:48%;
+  background:#31374F;
+  color:#fff;
+  display:block;
+  font-size:16px;
+  margin:20px auto;
+  padding:20px;
+  text-align:center;
+  text-decoration:none;
+  width:48%;
 }
 .buttons {
   padding:0 20px 20px; margin-bottom: 10px;
@@ -23,7 +31,12 @@
   background:#FFF;color:#31374F;float:left;margin:5px;
 }
 .center .flipcover-center h3 {
-  -moz-transform:scale(1.08);-ms-transform:scale(1.08);-o-transform:scale(1.08);-webkit-transform:scale(1.08);color:#e67e22;opacity:1;transform:scale(1.08);
+  -moz-transform: scale(1.08);
+  -ms-transform:scale(1.08);
+  -o-transform:scale(1.08);
+  -webkit-transform:scale(1.08);
+  color:#e67e22;opacity:1;
+  transform:scale(1.08);
 }
 .center h3 {
   opacity:0.8;transition:all 300ms ease;
@@ -38,7 +51,11 @@
   font-weight:400;margin-top:40px;
 }
 .features {
-  display:block;list-style-type:none;margin-top:30px;padding:0;text-align:center;
+  display: block;
+  list-style-type: none;
+  margin-top:30px;
+  padding:0;
+  text-align:center;
 }
 .features li {
   margin:20px 0;
@@ -47,7 +64,14 @@
   background:#FFF;color:#31374F; margin-bottom: 40px;
 }
 .fixed-header {
-  background:#FFF;box-shadow:2px 0 5px rgba(0,0,0,0.5);display:none;padding:10px;position:fixed;top:0;width:100%;z-index:10000;
+  background:#FFF;
+  box-shadow:2px 0 5px rgba(0,0,0,0.5);
+  display:none;
+  padding:10px;
+  position:fixed;
+  top:0;
+  width:100%;
+  z-index:10000;
 }
 .fixed-header .header-content {
   margin:auto;width:600px;
